[project]
name = "david-s-capstone-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyvis>=0.3.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
]
